# battery-monitor

./: .gitignore  CHANGELOG.md  README.md
battery-monitor/: meson.build
battery-monitor/data/: battery-monitor-autostart.desktop
battery-monitor/debian/: battery-monitor.substvars  changelog  control  files  postinst  prerm
battery-monitor/debian/.debhelper/battery-monitor/: dbgsym-build-ids
battery-monitor/debian/.debhelper/battery-monitor/dbgsym-root/DEBIAN/: control  md5sums
battery-monitor/debian/battery-monitor/DEBIAN/: control  md5sums  postinst  prerm
battery-monitor/debian/battery-monitor/usr/share/applications/: battery-monitor.desktop
battery-monitor/src/: battery.vala  history.vala  main.vala
battery-monitor/src/ui/: chart.vala  settings.vala  tray.vala  widget.vala  window.vala
battery-monitor/src/utils/: autostart.vala  config.vala  notification.vala
docs/compose/plans/: 2026-06-26-battery-monitor.md
docs/compose/reports/: battery-monitor.md
